# nixie-prototype

./: .gitignore  LICENSE  Makefile  README.md  openapi.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python.yml  test.yml
benchmark/: script.js
integration/: basic.hurl  complex.hurl  keys.hurl
nixie/: api.py  backend.py  backend_ini.py  core.py  frontend.py  nixie.py
tests/: test_api.py  test_backend.py  test_frontend.py  test_frontend_crud.py  test_frontend_errors.py  test_frontend_extra.py  test_nixie.py  test_nixie_crud.py  test_nixie_errors.py  test_nixie_extra.py  test_ringbuffer.py
