[tool.poetry]
name = "nixie-prototype"
version = "0.3.0"
description = "Service that allows to create, update and delete counters"
authors = ["Eric Avdey <eiri@eiri.ca>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nixie"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
nanoid = "^2.0.0"
click = "^8.1.7"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"


[tool.poetry.group.lint.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
