[project]
name = "nixie-prototype"
version = "0.3.0"
description = "Service that allows to create, update and delete counters"
requires-python = "<4.0,>=3.10"
dependencies = [
    "fastapi<1.0.0,>=0.115.2",
    "uvicorn<1.0.0,>=0.32.0",
    "nanoid<3.0.0,>=2.0.0",
    "click<9.0.0,>=8.1.7",
]
authors = [{ name = "Eric Avdey", email = "eiri@eiri.ca" }]
license = "MIT"
readme = "README.md"

[dependency-groups]
test = [
    "pytest<9.0.0,>=8.0.0",
    "pytest-cov<5.0.0,>=4.1.0",
    "httpx<1.0.0,>=0.26.0",
]
lint = ["ruff<1.0.0,>=0.2.1"]

[tool.setuptools]
py-modules = ["nixie"]
